--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
         "url": "https://github.com/jacobjdev/Homework-3---RESTful-Server"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.17.1",
-        "sqlite3": "^4.1.0",
-        "js2xmlparser": "^4.0.0"
+        "js2xmlparser": "^4.0.0",
+        "sqlite3": "^4.1.0"
     }
 }
